# FFTWater

./: .gitignore  CMakeLists.txt  FFTWaterConfig.cmake.in  FFTWaterConfigVersion.cmake.in  README.md  build.sh
CMake/: FindFFTW3.cmake
OceanSurface/: OceanSurface.cpp  OceanSurface.h  OceanSurfaceEXPORT.h  Vec2f.cpp  Vec2f.h
Resources/: display.fsh  display.vsh  renderGrid.fsh  renderGrid.vsh
include/: FFTWaterEXPORT.hxx
src/: DialogParameters.ui  camera.cpp  camera.h  functions.cpp  functions.h  main.cpp  waterfftvisu.cpp  waterfftvisu.h  waterfftvisu.qrc  waterfftvisu.ui
